* fix crash where unloading attacking transports to allied nations when a defending transport was present and the allied transport dies in the battle (sgb)

* fix crash with unloading units to multiple allied territories and multiple transports die (sgb)

* fix low luck aa casualty selection when different plane types are present (sgb)

Changes for 1.2.4

* fix bug (2960696) Strategic Bombing Crash in 1.2.3.0 (sgb)

* fix bug 2961673 crash in strong ai (sgb)

* fix bug 2943370, lock not held (sgb)

* fix exception with casualty selection in low luck (sgb)

* fix bug in strong ai when there are no transport production rules (sgb)

* fix null pointer in strong ai (sgb)

Changes for 1.2.3

* fix downloaded map skins (sgb)

* Add default AI setting for 'Neutral' players in remote games (ComradeKev)

* remove nwo map in default install, this allows it to be updated independently (sgb)

* update xml for big world,great war, update misc images for great war, update flags for great war, update italian cruiser image, update chineese and american aa gun,
 add various flags, add various missing units (Veqryn, ubernaut, EB (OnanTheBrBr), and U-boat)

* add optional version number to map listing xml file.  This version number will be saved when the game is downloaded.  When the user is asked to delete
an already downloaded map, the dialog will have the old and new versions in the overwrite message.  Version numbers are 2-4 numbers separated by a '.', eg 1.2, 12.23, 1.2.3, 1.2.3.4  (sgb)

* Tweaked version error message and aircraft landing on CV validation (ComradeKev)
 
* Patch bug () Dump in EasyAI non-combat movement (ComradeKev)

* Patch bug (2953997) Dump in StrongAI non-combat movement (ComradeKev)

* Fix bug (2955224) Low Luck casualties not being taken (ComradeKev)

* Fix bug (2951839) reporting that non-blitzed neutrals are charging fee, causing dumps (ComradeKev)

* Fix bug (2951882) amphib units being ignored (ComradeKev)

* increase max java memory to 256m (sgb)
