@@ -3,12 +3,19 @@ package games.strategy.triplea.delegate;
 import static games.strategy.triplea.delegate.GameDataTestUtil.*;
 import games.strategy.engine.data.GameData;
 import games.strategy.engine.data.ITestDelegateBridge;
+import games.strategy.engine.data.PlayerID;
 import games.strategy.engine.data.Unit;
 import games.strategy.engine.random.ScriptedRandomSource;
+import games.strategy.net.GUID;
+import games.strategy.triplea.delegate.dataObjects.CasualtyDetails;
+import games.strategy.triplea.util.DummyTripleAPlayer;
 import games.strategy.triplea.xml.LoadGameUtil;
 import games.strategy.util.Match;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 
 import junit.framework.TestCase;
 
@@ -26,6 +33,8 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuck() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
+		
 		DiceRoll roll = new DiceRoll(new int[] {0}, 1, 1, false);
 		Collection<Unit> planes = bomber(m_data).create(5, british(m_data));
 		Collection<Unit> casualties = BattleCalculator.getAACasualties(planes, roll, null, null, null, m_data, null, territory("Germany",m_data));
@@ -35,6 +44,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixed() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		
 		//6 bombers and 6 fighters
 		Collection<Unit> planes = bomber(m_data).create(6, british(m_data));
@@ -54,9 +64,86 @@ public class BattleCalculatorTest extends TestCase
 		assertEquals(Match.countMatches(casualties, Matches.UnitIsStrategicBomber.invert()), 1);
 	}
 	
+	public void testAACasualtiesLowLuckMixedWithChooseAACasualties() 
+	{
+		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, true);
+		
+		//6 bombers and 6 fighters
+		Collection<Unit> planes = bomber(m_data).create(6, british(m_data));
+		planes.addAll(fighter(m_data).create(6, british(m_data)));
+
+		ITestDelegateBridge bridge = getDelegateBridge(british(m_data));
+		bridge.setRemote(new DummyTripleAPlayer() {
+
+			@Override
+			public CasualtyDetails selectCasualties(
+					Collection<Unit> selectFrom,
+					Map<Unit, Collection<Unit>> dependents, int count,
+					String message, DiceRoll dice, PlayerID hit,
+					List<Unit> defaultCasualties, GUID battleID) {
+				
+				List<Unit> selected = Match.getNMatches(selectFrom, count, Matches.UnitIsStrategicBomber);
+				return new CasualtyDetails(selected, new ArrayList<Unit>(), false);
+				
+			}
+			
+		});
+		//don't allow rolling, 6 of each is deterministic
+		bridge.setRandomSource(new ScriptedRandomSource(new int[] {ScriptedRandomSource.ERROR}));
+		
+		DiceRoll roll = DiceRoll.rollAA(planes, bridge, territory("Germany", m_data), m_data);		
+		
+		Collection<Unit> casualties = BattleCalculator.getAACasualties(planes, roll, bridge, germans(m_data), british(m_data), m_data, null,  territory("Germany",m_data));
+		assertEquals(casualties.size(), 2);
+		
+		//we selected all bombers
+		assertEquals(Match.countMatches(casualties, Matches.UnitIsStrategicBomber), 2);
+		assertEquals(Match.countMatches(casualties, Matches.UnitIsStrategicBomber.invert()), 0);
+	}
+	
+	public void testAACasualtiesLowLuckMixedWithChooseAACasualtiesRoll() 
+	{
+		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, true);
+		
+		//7 bombers and 7 fighters
+		Collection<Unit> planes = bomber(m_data).create(7, british(m_data));
+		planes.addAll(fighter(m_data).create(7, british(m_data)));
+
+		ITestDelegateBridge bridge = getDelegateBridge(british(m_data));
+		bridge.setRemote(new DummyTripleAPlayer() {
+
+			@Override
+			public CasualtyDetails selectCasualties(
+					Collection<Unit> selectFrom,
+					Map<Unit, Collection<Unit>> dependents, int count,
+					String message, DiceRoll dice, PlayerID hit,
+					List<Unit> defaultCasualties, GUID battleID) {
+				
+				List<Unit> selected = Match.getNMatches(selectFrom, count, Matches.UnitIsStrategicBomber);
+				return new CasualtyDetails(selected, new ArrayList<Unit>(), false);
+				
+			}
+			
+		});
+		//only 1 roll, a hit
+		bridge.setRandomSource(new ScriptedRandomSource(new int[] {0, ScriptedRandomSource.ERROR}));
+		
+		DiceRoll roll = DiceRoll.rollAA(planes, bridge, territory("Germany", m_data), m_data);		
+		
+		Collection<Unit> casualties = BattleCalculator.getAACasualties(planes, roll, bridge, germans(m_data), british(m_data), m_data, null,  territory("Germany",m_data));
+		assertEquals(casualties.size(), 3);
+		
+		//we selected all bombers
+		assertEquals(Match.countMatches(casualties, Matches.UnitIsStrategicBomber), 3);
+		assertEquals(Match.countMatches(casualties, Matches.UnitIsStrategicBomber.invert()), 0);
+	}
+	
 	public void testAACasualtiesLowLuckMixedWithRolling() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		
 		//7 bombers and 7 fighters
 		Collection<Unit> planes = bomber(m_data).create(7, british(m_data));
@@ -83,6 +170,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixedWithRollingMiss() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		
 		//7 bombers and 7 fighters
 		Collection<Unit> planes = bomber(m_data).create(7, british(m_data));
@@ -110,6 +198,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixedWithRollingForBombers() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		
 		//6 bombers, 7 fighters
 		Collection<Unit> planes = bomber(m_data).create(6, british(m_data));
@@ -136,6 +225,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixedRadar() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		givePlayerRadar(germans(m_data));
 		
 		//3 bombers and 3 fighters
@@ -159,6 +249,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixedWithRollingRadar() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		givePlayerRadar(germans(m_data));
 		
 		//4 bombers and 4 fighters
@@ -186,6 +277,7 @@ public class BattleCalculatorTest extends TestCase
 	public void testAACasualtiesLowLuckMixedWithRollingMissRadar() 
 	{
 		makeGameLowLuck(m_data);
+		setSelectAACasualties(m_data, false);
 		givePlayerRadar(germans(m_data));
 		
 		//4 bombers and 4 fighters
